--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,12 @@ target 'interactiveSearchApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
+  pod 'react-native-blur', :path => '../node_modules/@react-native-community/blur'
+
   target 'interactiveSearchAppTests' do
     inherit! :complete
     # Pods for testing
