--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.0",
     "redux": "^4.1.2",
@@ -23,6 +24,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/styled-components-react-native": "^5.1.3",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
